0: fixes duration alignment

--- a/packages/frontend/src/components/durationSelect/DurationSelect.css
+++ b/packages/frontend/src/components/durationSelect/DurationSelect.css
@@ -6,6 +6,9 @@
     margin: 1em;
     min-height: 12em;
 }
+ul{
+    padding-inline-start: 0;
+}
 li{
     list-style-type: none;
     padding: 0;
